fix: images path

--- a/src/components/_about-director.html
+++ b/src/components/_about-director.html
@@ -9,7 +9,7 @@
             </div>
             <div class="about-director__text">
                 <figure class="about-director__text-icon">
-                    <img src="../assets/images/icons/blockquotes.svg" alt="">
+                    <img src="./assets/images/icons/blockquotes.svg" alt="">
                 </figure>
                 
                 <div class="about-director__text-title">
