--- a/src/components/_about-mission.html
+++ b/src/components/_about-mission.html
@@ -24,7 +24,7 @@
 
             <div class="mission__poster">
                 <figure class="mission__poster-image">
-                    <img src="../assets/images/sections/about/about-mission-image.png" alt="">
+                    <img src="./assets/images/sections/about/about-mission-image.png" alt="">
                 </figure>
             </div>
         </div>
