--- a/src/components/_about-task.html
+++ b/src/components/_about-task.html
@@ -12,28 +12,28 @@
                 <ul class="task__info-list">
                     <li class="task__info-item">
                         <figure class="task__info-item-icon">
-                            <img src="../assets/images/sections/task/task-item-icon-1.svg" alt="" />
+                            <img src="./assets/images/sections/task/task-item-icon-1.svg" alt="" />
                         </figure>
 
                         <p class="task__info-item-title">Индивидуальный подход к каждому клиенту</p>
                     </li>
                     <li class="task__info-item">
                         <figure class="task__info-item-icon">
-                            <img src="../assets/images/sections/task/task-item-icon-2.svg" alt="" />
+                            <img src="./assets/images/sections/task/task-item-icon-2.svg" alt="" />
                         </figure>
 
                         <p class="task__info-item-title">Скорость оформления заказа</p>
                     </li>
                     <li class="task__info-item">
                         <figure class="task__info-item-icon">
-                            <img src="../assets/images/sections/task/task-item-icon-3.svg" alt="" />
+                            <img src="./assets/images/sections/task/task-item-icon-3.svg" alt="" />
                         </figure>
 
                         <p class="task__info-item-title">Скорость сборки заказа</p>
                     </li>
                     <li class="task__info-item">
                         <figure class="task__info-item-icon">
-                            <img src="../assets/images/sections/task/task-item-icon-4.svg" alt="" />
+                            <img src="./assets/images/sections/task/task-item-icon-4.svg" alt="" />
                         </figure>
 
                         <p class="task__info-item-title">
@@ -44,7 +44,7 @@
             </div>
 
             <figure class="task__image">
-                <img src="../assets/images/sections/task/task-image.png" alt="">
+                <img src="./assets/images/sections/task/task-image.png" alt="">
             </figure>
 
             <div class="task__promotion">
@@ -63,7 +63,7 @@
                 </div>
 
                 <figure class="task__promotion-image">
-                    <img src="../assets/images/sections/task/task-promotion-image.png" alt="">
+                    <img src="./assets/images/sections/task/task-promotion-image.png" alt="">
                 </figure>
             </div>
         </div>
