--- a/src/components/_basket.html
+++ b/src/components/_basket.html
@@ -11,7 +11,7 @@
             <div class="basket__actions">
                 <div class="basket__actions-text">
                     <figure class="basket__actions-text-icon">
-                        <img src="../assets/images/icons/box.svg" alt="" />
+                        <img src="./assets/images/icons/box.svg" alt="" />
                     </figure>
 
                     <p class="text__regular-16">
@@ -23,7 +23,7 @@
                     <li class="basket__actions-item">
                         <a download="#" class="link">
                             <figure class="basket__actions-item-icon">
-                                <img src="../assets/images/icons/link.svg" alt="" />
+                                <img src="./assets/images/icons/link.svg" alt="" />
                             </figure>
 
                             <span class="basket__actions-item-title text__regular-16"> Скачать файлом </span>
@@ -32,7 +32,7 @@
                     <li class="basket__actions-item">
                         <a download="#" class="link">
                             <figure class="basket__actions-item-icon">
-                                <img src="../assets/images/icons/printer.svg" alt="" />
+                                <img src="./assets/images/icons/printer.svg" alt="" />
                             </figure>
 
                             <span class="basket__actions-item-title text__regular-16">Распечатать</span>
@@ -41,7 +41,7 @@
                     <li class="basket__actions-item">
                         <a href="" class="link">
                             <figure class="basket__actions-item-icon">
-                                <img src="../assets/images/icons/share.svg" alt="" />
+                                <img src="./assets/images/icons/share.svg" alt="" />
                             </figure>
 
                             <span class="basket__actions-item-title text__regular-16">Поделиться</span>
@@ -76,7 +76,7 @@
                                 <div class="basket__card-content">
                                     <figure class="basket__card-image">
                                         <img
-                                            src="../assets/images/sections/basket/basket-card-image.png"
+                                            src="./assets/images/sections/basket/basket-card-image.png"
                                             alt=""
                                         />
                                     </figure>
@@ -138,7 +138,7 @@
 
                                                     <button class="basket__card-info-top-counter-button">
                                                         <img
-                                                            src="../assets/images/sections/basket/field-button-icon.svg"
+                                                            src="./assets/images/sections/basket/field-button-icon.svg"
                                                             alt=""
                                                         />
                                                     </button>
@@ -212,7 +212,7 @@
 
                                                 <li class="basket__card-info-bottom-button">
                                                     <button>
-                                                        <img src="../assets/images/icons/close.svg" alt="" />
+                                                        <img src="./assets/images/icons/close.svg" alt="" />
                                                     </button>
                                                 </li>
                                             </ul>
@@ -254,7 +254,7 @@
                                         <span class="text__medium"> С этим товаром покупают </span>
 
                                         <figure class="basket__card-addiction-icon">
-                                            <img src="../assets/images/icons/arrow-down-black.svg" alt="" />
+                                            <img src="./assets/images/icons/arrow-down-black.svg" alt="" />
                                         </figure>
                                     </div>
 
@@ -266,7 +266,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                    src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                    src="./assets/images/sections/basket/addiction-card-image.png"
                                                                     alt=""
                                                                 />
                                                             </figure>
@@ -337,7 +337,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                    src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                    src="./assets/images/sections/basket/addiction-card-image.png"
                                                                     alt=""
                                                                 />
                                                             </figure>
@@ -408,7 +408,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                    src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                    src="./assets/images/sections/basket/addiction-card-image.png"
                                                                     alt=""
                                                                 />
                                                             </figure>
@@ -479,7 +479,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                    src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                    src="./assets/images/sections/basket/addiction-card-image.png"
                                                                     alt=""
                                                                 />
                                                             </figure>
@@ -574,7 +574,7 @@
                                 <div class="basket__card-content">
                                     <figure class="basket__card-image">
                                         <img
-                                                src="../assets/images/sections/basket/basket-card-image.png"
+                                                src="./assets/images/sections/basket/basket-card-image.png"
                                                 alt=""
                                         />
                                     </figure>
@@ -636,7 +636,7 @@
 
                                                     <button class="basket__card-info-top-counter-button">
                                                         <img
-                                                                src="../assets/images/sections/basket/field-button-icon.svg"
+                                                                src="./assets/images/sections/basket/field-button-icon.svg"
                                                                 alt=""
                                                         />
                                                     </button>
@@ -710,7 +710,7 @@
 
                                                 <li class="basket__card-info-bottom-button">
                                                     <button>
-                                                        <img src="../assets/images/icons/close.svg" alt="" />
+                                                        <img src="./assets/images/icons/close.svg" alt="" />
                                                     </button>
                                                 </li>
                                             </ul>
@@ -752,7 +752,7 @@
                                         <span class="text__medium"> С этим товаром покупают </span>
 
                                         <figure class="basket__card-addiction-icon">
-                                            <img src="../assets/images/icons/arrow-down-black.svg" alt="" />
+                                            <img src="./assets/images/icons/arrow-down-black.svg" alt="" />
                                         </figure>
                                     </div>
 
@@ -764,7 +764,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                        src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                        src="./assets/images/sections/basket/addiction-card-image.png"
                                                                         alt=""
                                                                 />
                                                             </figure>
@@ -835,7 +835,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                        src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                        src="./assets/images/sections/basket/addiction-card-image.png"
                                                                         alt=""
                                                                 />
                                                             </figure>
@@ -906,7 +906,7 @@
                                                         <a href="#" class="basket__card-addiction-slide">
                                                             <figure class="basket__card-addiction-slide-icon">
                                                                 <img
-                                                                        src="../assets/images/sections/basket/addiction-card-image.png"
+                                                                        src="./assets/images/sections/basket/addiction-card-image.png"
                                                                         alt=""
                                                                 />
                                                             </figure>
