--- a/src/components/_catalog-categories.html
+++ b/src/components/_catalog-categories.html
@@ -108,7 +108,7 @@
                 <li>
                     <a class="categories__card" href="#">
                         <figure class="categories__card-image">
-                            <img src="../assets/images/sections/catalog/catalog-image-1.png" alt="" />
+                            <img src="./assets/images/sections/catalog/catalog-image-1.png" alt="" />
                         </figure>
 
                         <p class="categories__card-title">Корзины и плетеные изделия</p>
