--- a/src/components/_catalog.html
+++ b/src/components/_catalog.html
@@ -26,7 +26,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -42,7 +42,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-2.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-2.svg"
                                 alt=""
                             />
                         </figure>
@@ -58,7 +58,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-3.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-3.svg"
                                 alt=""
                             />
                         </figure>
@@ -74,7 +74,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-4.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-4.svg"
                                 alt=""
                             />
                         </figure>
@@ -90,7 +90,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -106,7 +106,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -122,7 +122,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-2.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-2.svg"
                                 alt=""
                             />
                         </figure>
@@ -138,7 +138,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-3.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-3.svg"
                                 alt=""
                             />
                         </figure>
@@ -154,7 +154,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-4.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-4.svg"
                                 alt=""
                             />
                         </figure>
@@ -170,7 +170,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -186,7 +186,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -202,7 +202,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-2.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-2.svg"
                                 alt=""
                             />
                         </figure>
@@ -218,7 +218,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-3.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-3.svg"
                                 alt=""
                             />
                         </figure>
@@ -234,7 +234,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-4.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-4.svg"
                                 alt=""
                             />
                         </figure>
@@ -250,7 +250,7 @@
                     <a href="#">
                         <figure class="catalog__categories-list-item-icon">
                             <img
-                                src="../assets/images/sections/catalog/catalog-category-item-icon-1.svg"
+                                src="./assets/images/sections/catalog/catalog-category-item-icon-1.svg"
                                 alt=""
                             />
                         </figure>
@@ -305,7 +305,7 @@
                 <div class="catalog__filters-sample">
                     <div class="catalog__filters-sample-heading">
                         <figure class="catalog__filters-sample-icon">
-                            <img src="../assets/images/icons/clipboard.svg" alt="" />
+                            <img src="./assets/images/icons/clipboard.svg" alt="" />
                         </figure>
 
                         <p class="catalog__filters-sample-text h h_h4">Подборки</p>
@@ -1907,7 +1907,7 @@
                                 <ul class="recommendations__card-info">
                                     <li class="recommendations__card-info-item">
                                         <figure class="recommendations__card-info-item-icon">
-                                            <img src="../assets/images/icons/stock.svg" alt="" />
+                                            <img src="./assets/images/icons/stock.svg" alt="" />
                                         </figure>
 
                                         <p class="recommendations__card-info-item-text text__regular-16">
