--- a/src/components/_contacts.html
+++ b/src/components/_contacts.html
@@ -16,7 +16,7 @@
                         <ul class="contacts__item-communication-list">
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/phone.svg" alt="" />
+                                    <img src="./assets/images/icons/phone.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -27,7 +27,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/email.svg" alt="" />
+                                    <img src="./assets/images/icons/email.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -38,7 +38,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/location-green.svg" alt="" />
+                                    <img src="./assets/images/icons/location-green.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -51,7 +51,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/clock.svg" alt="" />
+                                    <img src="./assets/images/icons/clock.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -111,7 +111,7 @@
                         <ul class="contacts__item-communication-list">
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/phone.svg" alt="" />
+                                    <img src="./assets/images/icons/phone.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -123,7 +123,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/email.svg" alt="" />
+                                    <img src="./assets/images/icons/email.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -134,7 +134,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/location-green.svg" alt="" />
+                                    <img src="./assets/images/icons/location-green.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -149,7 +149,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/clock.svg" alt="" />
+                                    <img src="./assets/images/icons/clock.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -163,7 +163,7 @@
 
                        <div class="contacts__item-bottom">
                            <figure class="contacts__item-bottom-icon">
-                               <img src="../assets/images/sections/contacts/location-icon.svg" alt="">
+                               <img src="./assets/images/sections/contacts/location-icon.svg" alt="">
                            </figure>
 
                            <p class="text__regular-16">
@@ -183,7 +183,7 @@
                         <ul class="contacts__item-communication-list">
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/phone.svg" alt="" />
+                                    <img src="./assets/images/icons/phone.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -194,7 +194,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/email.svg" alt="" />
+                                    <img src="./assets/images/icons/email.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -205,7 +205,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/location-green.svg" alt="" />
+                                    <img src="./assets/images/icons/location-green.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -218,7 +218,7 @@
                             </li>
                             <li class="contacts__item-communication-item">
                                 <figure class="contacts__item-communication-item-icon">
-                                    <img src="../assets/images/icons/clock.svg" alt="" />
+                                    <img src="./assets/images/icons/clock.svg" alt="" />
                                 </figure>
 
                                 <div class="contacts__item-communication-item-info">
@@ -233,7 +233,7 @@
 
                         <div class="contacts__item-bottom">
                             <figure class="contacts__item-bottom-icon">
-                                <img src="../assets/images/sections/contacts/location-icon.svg" alt="">
+                                <img src="./assets/images/sections/contacts/location-icon.svg" alt="">
                             </figure>
 
                             <p class="text__regular-16">
