--- a/src/components/_cooperation.html
+++ b/src/components/_cooperation.html
@@ -32,7 +32,7 @@
 
                     <div class="cooperation__promotion-block --image">
                         <figure class="cooperation__promotion-block-image">
-                            <img src="../assets/images/sections/cooperation/cooperation-image.png" alt="" />
+                            <img src="./assets/images/sections/cooperation/cooperation-image.png" alt="" />
                         </figure>
                     </div>
                 </div>
