--- a/src/components/_pricing.html
+++ b/src/components/_pricing.html
@@ -74,7 +74,7 @@
                 <ul class="pricing__contacts-list">
                     <li class="pricing__contacts-item">
                         <figure class="pricing__contacts-item-icon">
-                            <img src="../assets/images/icons/phone.svg" alt="" />
+                            <img src="./assets/images/icons/phone.svg" alt="" />
                         </figure>
 
                         <div class="pricing__contacts-item-text">
@@ -87,7 +87,7 @@
                     </li>
                     <li class="pricing__contacts-item">
                         <figure class="pricing__contacts-item-icon">
-                            <img src="../assets/images/icons/email.svg" alt="" />
+                            <img src="./assets/images/icons/email.svg" alt="" />
                         </figure>
 
                         <div class="pricing__contacts-item-text">
@@ -100,7 +100,7 @@
                     </li>
                     <li class="pricing__contacts-item">
                         <figure class="pricing__contacts-item-icon">
-                            <img src="../assets/images/icons/clock.svg" alt="" />
+                            <img src="./assets/images/icons/clock.svg" alt="" />
                         </figure>
 
                         <div class="pricing__contacts-item-text">
