--- a/src/components/_promotions.html
+++ b/src/components/_promotions.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
@@ -108,7 +108,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
@@ -117,8 +117,8 @@
                 </li>
                 <li class="promotions__card --large">
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/large-image.png" alt="" class="_desktop-only"/>
-                        <img src="../assets/images/sections/promotions/large-image-mobile.png" alt="" class="_mobile-only"/>
+                        <img src="./assets/images/sections/promotions/large-image.png" alt="" class="_desktop-only"/>
+                        <img src="./assets/images/sections/promotions/large-image-mobile.png" alt="" class="_mobile-only"/>
                     </figure>
 
                     <h2 class="promotions__card-title h h_h1">Коробки для цветов в ассортименте</h2>
@@ -177,7 +177,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
@@ -230,7 +230,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image-3.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image-3.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
@@ -283,7 +283,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
@@ -336,7 +336,7 @@
                     </div>
 
                     <figure class="promotions__card-image">
-                        <img src="../assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
+                        <img src="./assets/images/sections/promotions/promotion-card-image-2.png" alt="" />
                     </figure>
 
                     <p class="promotions__card-description h h_h3 _mobile-only">
