--- a/src/components/_receipts.html
+++ b/src/components/_receipts.html
@@ -63,7 +63,7 @@
                             >
 
                                 <figure class="receipts__card-bottom-icon">
-                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                    <img src="./assets/images/icons/arrow-rotated.svg" alt="" />
                                 </figure>
                             </div>
                         </a>
@@ -88,7 +88,7 @@
                             >
 
                                 <figure class="receipts__card-bottom-icon">
-                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                    <img src="./assets/images/icons/arrow-rotated.svg" alt="" />
                                 </figure>
                             </div>
                         </a>
@@ -113,7 +113,7 @@
                             >
 
                                 <figure class="receipts__card-bottom-icon">
-                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                    <img src="./assets/images/icons/arrow-rotated.svg" alt="" />
                                 </figure>
                             </div>
                         </a>
@@ -135,7 +135,7 @@
                                 <span class="receipts__card-bottom-title">Краска-спрей <br> для цветов</span>
 
                                 <figure class="receipts__card-bottom-icon">
-                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                    <img src="./assets/images/icons/arrow-rotated.svg" alt="" />
                                 </figure>
                             </div>
                         </a>
