--- a/src/components/_seo.html
+++ b/src/components/_seo.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="seo__content">
             <figure class="seo__image">
-                <img src="../assets/images/sections/seo/image.png" alt="">
+                <img src="./assets/images/sections/seo/image.png" alt="">
             </figure>
 
             <div class="seo__text">
