--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,11 +4,11 @@
             <div class="footer__main">
                 <div class="footer__block footer__block--logo">
                     <div class="footer__logo">
-                        <a href="/"><img src="../assets/images/miray-logo.svg" alt="" /></a>
+                        <a href="/"><img src="./assets/images/miray-logo.svg" alt="" /></a>
                     </div>
                     <div class="footer__subscribe">
                         <a href="/" class="btn">
-                            <img src="../assets/images/telegram.gif" alt="" />
+                            <img src="./assets/images/telegram.gif" alt="" />
                             <span>Подписаться на новости</span>
                         </a>
                     </div>
