--- a/src/components/header.html
+++ b/src/components/header.html
@@ -3,7 +3,7 @@
         <div class="header__inner">
             <div class="header__top">
                 <div class="header__logo">
-                    <a href="/"><img src="../assets/images/miray-logo.svg" alt="" /></a>
+                    <a href="/"><img src="./assets/images/miray-logo.svg" alt="" /></a>
                 </div>
                 <button class="header__catalog-button">
                     <span>
@@ -380,7 +380,7 @@
                                             <a class="search-modal-slide__wrapper" href="#">
                                                 <div class="search-modal-slide__image">
                                                     <img
-                                                        src="../assets/images/sections/catalog/catalog-image-1.png"
+                                                        src="./assets/images/sections/catalog/catalog-image-1.png"
                                                         alt=""
                                                     />
                                                 </div>
@@ -441,7 +441,7 @@
                                             <a class="search-modal-slide__wrapper" href="#">
                                                 <div class="search-modal-slide__image">
                                                     <img
-                                                        src="../assets/images/sections/catalog/catalog-image-1.png"
+                                                        src="./assets/images/sections/catalog/catalog-image-1.png"
                                                         alt=""
                                                     />
                                                 </div>
@@ -502,7 +502,7 @@
                                             <a class="search-modal-slide__wrapper" href="#">
                                                 <div class="search-modal-slide__image">
                                                     <img
-                                                        src="../assets/images/sections/catalog/catalog-image-1.png"
+                                                        src="./assets/images/sections/catalog/catalog-image-1.png"
                                                         alt=""
                                                     />
                                                 </div>
@@ -563,7 +563,7 @@
                                             <a class="search-modal-slide__wrapper" href="#">
                                                 <div class="search-modal-slide__image">
                                                     <img
-                                                        src="../assets/images/sections/catalog/catalog-image-1.png"
+                                                        src="./assets/images/sections/catalog/catalog-image-1.png"
                                                         alt=""
                                                     />
                                                 </div>
@@ -913,7 +913,7 @@
                         <div class="header-catalog__item-links">
                             <a href="#" class="header-catalog__item-link">
                                 <div class="header-catalog__item-img">
-                                    <img src="../assets/images/sections/catalog/catalog-image-1.png" alt="" />
+                                    <img src="./assets/images/sections/catalog/catalog-image-1.png" alt="" />
                                 </div>
                                 <div class="header-catalog__item-text">
                                     <strong>Новогодние открытки</strong><span>22</span>
