--- a/src/scss/sections/_popular.scss
+++ b/src/scss/sections/_popular.scss
@@ -21,7 +21,7 @@
     }
 
     &__btn {
-        background-image: url(../assets/images/sections/popular-card/btn.png);
+        background-image: url(./assets/images/sections/popular-card/btn.png);
         background-repeat: no-repeat;
         background-size: cover;
         width: 53.3rem;
