--- a/src/scss/sections/_sale-card.scss
+++ b/src/scss/sections/_sale-card.scss
@@ -70,7 +70,7 @@
             content:'';
             width: 3.2rem;
             height: 3.2rem;
-            background-image: url(../assets/images/sale/arrow.svg);
+            background-image: url(./assets/images/sale/arrow.svg);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             right: 0;
