--- a/src/components/_feature.html
+++ b/src/components/_feature.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="feature__content">
             <figure class="feature__poster">
-                <img src="../assets/images/sections/feature/poster-image.png" alt="" />
+                <img src="./assets/images/sections/feature/poster-image.png" alt="" />
             </figure>
 
             <div class="feature__text">
