--- a/src/components/_figuration.html
+++ b/src/components/_figuration.html
@@ -12,7 +12,7 @@
                     <li class="swiper-slide">
                         <div class="figuration__item">
                             <figure class="figuration__item-icon">
-                                <img src="../assets/images/icons/globus.svg" alt="" />
+                                <img src="./assets/images/icons/globus.svg" alt="" />
                             </figure>
 
                             <strong class="figuration__item-counter h h_h1"> 01 </strong>
@@ -28,7 +28,7 @@
                         <div class="figuration__item">
                             <div class="figuration__item-wrapper">
                                 <figure class="figuration__item-icon">
-                                    <img src="../assets/images/icons/receipt.svg" alt="" />
+                                    <img src="./assets/images/icons/receipt.svg" alt="" />
                                 </figure>
 
                                 <strong class="figuration__item-counter h h_h1"> 02 </strong>
@@ -80,7 +80,7 @@
                     <li class="swiper-slide">
                        <div class="figuration__item">
                            <figure class="figuration__item-icon">
-                               <img src="../assets/images/icons/shop.svg" alt="" />
+                               <img src="./assets/images/icons/shop.svg" alt="" />
                            </figure>
 
                            <strong class="figuration__item-counter h h_h1"> 03 </strong>
@@ -91,7 +91,7 @@
 
                            <div class="figuration__item-bottom">
                                <figure class="figuration__item-bottom-icon">
-                                   <img src="../assets/images/icons/location.svg" alt="" />
+                                   <img src="./assets/images/icons/location.svg" alt="" />
                                </figure>
 
                                <p class="figuration__item-bottom-text text__regular-20">
