--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Gilroy';
     src: 
-        url('../assets/fonts/Gilroy-Regular.woff2') format('woff2');
+        url('./assets/fonts/Gilroy-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -10,7 +10,7 @@
 @font-face {
     font-family: 'Gilroy';
     src:
-        url('../assets/fonts/Gilroy-Bold.woff2') format('woff2');
+        url('./assets/fonts/Gilroy-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
 }
@@ -19,7 +19,7 @@
 @font-face {
     font-family: 'Gilroy';
     src:
-        url('../assets/fonts/Gilroy-Light.woff2') format('woff2');
+        url('./assets/fonts/Gilroy-Light.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
 }
@@ -29,7 +29,7 @@
 @font-face {
     font-family: 'Gilroy';
     src: 
-        url('../assets/fonts/Gilroy-Medium.woff2') format('woff2');
+        url('./assets/fonts/Gilroy-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
 }
