--- a/src/scss/sections/_card.scss
+++ b/src/scss/sections/_card.scss
@@ -123,7 +123,7 @@
             content: "";
             width: 2.4rem;
             height: 2.4rem;
-            background-image: url(../assets/images/icons/box.svg);
+            background-image: url(./assets/images/icons/box.svg);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             top: 50%;
